  * Move package to contrib as virtualbox 4.2 needs a non-free compiler to
    build the BIOS.
  * Build-depend on libdevmapper-dev.
  * Refresh patches.
    - Drop 36-fix-ftbfs-xserver-112.patch, cve-2012-3221.patch and
      CVE-2013-0420.patch.
  * Drop all virtualbox-ose transitional packages.
  * Drop the virtualbox-fuse package as vdfuse fails to build with
    virtualbox 4.2.

 -- Felix Geyer <fgeyer@debian.org>  Fri, 25 Jan 2013 18:14:24 +0100

virtualbox (4.1.18-dfsg-2) unstable; urgency=high

  [ John Paul Adrian Glaubitz ]
  * Include patch to fix virtual graphics device user
    vulnerability CVE-2013-0420. (Closes: #698292)

 -- Felix Geyer <debfx-pkg@fobos.de>  Sat, 19 Jan 2013 18:05:25 +0100

virtualbox (4.1.18-dfsg-1.1) unstable; urgency=high

  * Non-maintainer upload.
  * Fix cve-2012-3221: missing privilege check for task gate switches
    (closes: 690777).

 -- Michael Gilbert <mgilbert@debian.org>  Thu, 18 Oct 2012 14:20:28 -0400

virtualbox (4.1.18-dfsg-1) unstable; urgency=low

  * New upstream release.
    - Fixes host freezes with 64-bit guests on 32-bit hosts. (LP: #1012627)
    - Fixes odd permissions of files in shared folders. (LP: #1013368)
  * Drop 37-fix-unregister-netdevice.patch, fixed upstream.
  * Compress orig tarball and binary packages with xz.

 -- Felix Geyer <debfx-pkg@fobos.de>  Thu, 21 Jun 2012 12:31:17 +0200

virtualbox (4.1.16-dfsg-2) unstable; urgency=low

  * Fix vboxnet device unregistration on kernel >= 3.2.18. (LP: #1009156)
    - Add 37-fix-unregister-netdevice.patch, backported from upstream.
  * Switch from python-central to dh_python2. (Closes: #617143)

 -- Felix Geyer <debfx-pkg@fobos.de>  Sun, 10 Jun 2012 21:32:09 +0200

virtualbox (4.1.16-dfsg-1) unstable; urgency=low

  * New upstream release.
  * Drop 37-fix-build-gcc47.patch, fixed upstream.

 -- Felix Geyer <debfx-pkg@fobos.de>  Tue, 29 May 2012 10:09:31 +0200

virtualbox (4.1.14-dfsg-2) unstable; urgency=low

  * Fix FTBFS with gcc 4.7 on i386.