@@ -150,6 +150,8 @@ override_dh_install:
 	dh_install -p$(sname) -X out/bin/VBoxDbg.so
 	dh_install --remaining-packages
 
+	install -m 644 -p -D out/bin/additions/vboxvideo_drv_system.so \
+	    debian/$(uxname)/usr/lib/xorg/modules/drivers/vboxvideo_drv.so
 	convert debian/$(sxname)/usr/share/icons/hicolor/32x32/apps/virtualbox.png \
 	    debian/$(sxname)/usr/share/pixmaps/virtualbox.xpm
 
