@@ -2,15 +2,12 @@ out/bin/additions/src/vboxguest/*.* /usr/src/modules/virtualbox-guest/vboxguest
 out/bin/additions/src/vboxguest/common /usr/src/modules/virtualbox-guest/vboxguest
 out/bin/additions/src/vboxguest/generic /usr/src/modules/virtualbox-guest/vboxguest
 out/bin/additions/src/vboxguest/VBox /usr/src/modules/virtualbox-guest/vboxguest
-out/bin/additions/src/vboxguest/build_in_tmp /usr/src/modules/virtualbox-guest/vboxguest
 out/bin/additions/src/vboxguest/Makefile /usr/src/modules/virtualbox-guest/vboxguest
 
 out/bin/additions/src/vboxsf/*.* /usr/src/modules/virtualbox-guest/vboxsf
-out/bin/additions/src/vboxsf/build_in_tmp /usr/src/modules/virtualbox-guest/vboxsf
 out/bin/additions/src/vboxsf/Makefile /usr/src/modules/virtualbox-guest/vboxsf
 
 out/bin/additions/src/vboxvideo/*.* /usr/src/modules/virtualbox-guest/vboxvideo
-out/bin/additions/src/vboxvideo/build_in_tmp /usr/src/modules/virtualbox-guest/vboxvideo
 out/bin/additions/src/vboxvideo/Makefile /usr/src/modules/virtualbox-guest/vboxvideo
 
 out/bin/additions/src/vboxguest/include/iprt/* /usr/src/modules/virtualbox-guest/include/iprt
