@@ -1,5 +1,4 @@
 out/bin/additions/VBoxClient /usr/bin
 src/VBox/Additions/x11/Installer/x11config.pl /usr/share/virtualbox
 src/VBox/Additions/x11/Installer/98vboxadd-xclient /etc/X11/Xsession.d
-out/bin/additions/vboxvideo_drv.so /usr/lib/xorg/modules/drivers
 out/bin/additions/VBoxOGL*.so /usr/lib
