@@ -20,6 +20,7 @@ out/bin/vboxshell.py /usr/lib/virtualbox
 out/bin/vboxwebsrv /usr/lib/virtualbox
 out/bin/webtest /usr/lib/virtualbox
 out/bin/libvboxjxpcom.so /usr/lib/virtualbox
+out/obj/VBoxBalloonCtrl /usr/lib/virtualbox
 
 out/bin/sdk/bindings/xpcom/java /usr/lib/virtualbox/sdk/bindings/xpcom
 out/bin/sdk/bindings/xpcom/python /usr/lib/virtualbox/sdk/bindings/xpcom
