@@ -12,6 +12,7 @@ virtualbox (4.2.6-dfsg-1) UNRELEASED; urgency=low
   * Drop all virtualbox-ose transitional packages.
   * Drop the virtualbox-fuse package as vdfuse fails to build with
     virtualbox 4.2.
+  * Update install files.
 
  -- Felix Geyer <fgeyer@debian.org>  Fri, 25 Jan 2013 18:14:24 +0100
 
